# docker_tii_assessment

./: .gitignore  Dockerfile  Dockerfile.save  LICENSE  README.md  docker_init.sh
tii_ws/: tii_ws.code-workspace
tii_ws/.catkin_tools/profiles/default/: devel_collisions.txt
tii_ws/devel/: .catkin
tii_ws/devel/include/os_lidar_filtering/: FilterConfig.h
tii_ws/devel/lib/os_lidar_filtering/: os_lidar_filtering_node
tii_ws/devel/lib/pkgconfig/: os_lidar_filtering.pc
tii_ws/devel/lib/python3/dist-packages/os_lidar_filtering/cfg/: FilterConfig.py
tii_ws/devel/share/os_lidar_filtering/cmake/: os_lidar_filteringConfig.cmake
tii_ws/devel/share/os_lidar_filtering/docs/: FilterConfig-usage.dox  FilterConfig.dox  FilterConfig.wikidoc
tii_ws/src/os_lidar_filtering/: CMakeLists.txt  package.xml
tii_ws/src/os_lidar_filtering/cfg/: FilterConfig.cfg
tii_ws/src/os_lidar_filtering/config/: params.yaml
tii_ws/src/os_lidar_filtering/data/: LiDARFilteringAssignment.bag
tii_ws/src/os_lidar_filtering/docs/: FilterConfig-usage.dox  FilterConfigConfig.dox  FilterConfigConfig.wikidoc  Lidar Filtering ConfigConfig-usage.dox
tii_ws/src/os_lidar_filtering/include/os_lidar_filtering/: pointcloud_processor.h
tii_ws/src/os_lidar_filtering/launch/: os_lidar_processor.launch
tii_ws/src/os_lidar_filtering/src/: main.cpp  pointcloud_processor.cpp
tii_ws/src/os_lidar_filtering/src/os_lidar_filtering/cfg/: FilterConfigConfig.py
